--- a/awebo_la_chernobyl_me_dijo_si.html
+++ b/awebo_la_chernobyl_me_dijo_si.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knew you would say yes!</title>
+    <title>SIUUUU</title>
     <link rel="stylesheet" href="./yes_style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
